--- a/src/index.css
+++ b/src/index.css
@@ -505,7 +505,7 @@ input[type="number"] {
   margin-top: 1px;
   padding-right: 8px;
 
-  background-image: url("./assets/img/icon-radio-empty.svg");
+  background-image: url("/assets/img/icon-radio-empty.svg");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 24px 24px;
@@ -516,7 +516,7 @@ input[type="number"] {
 }
 
 .radio__wrapper input[type="radio"]:checked + label::before {
-  background-image: url("./assets/img/icon-radio-checked.svg");
+  background-image: url("/assets/img/icon-radio-checked.svg");
 }
 
 .radio__wrapper label:hover,
